Feat: allow all in one cluster & tests with vagrant